--- a/css/clock.css
+++ b/css/clock.css
@@ -1,6 +1,7 @@
 body
 {
-    padding: 50px 0;
+    margin: 0;
+    padding: 100px 0;
     background-color: #2fb5c6;
     color: #fff;
     font-family: sans-serif;
@@ -11,9 +12,7 @@ body
 {
     margin: 0 auto;
     padding: 40px 20px;
-    width: 600px;
     background-color: rgba(255,255,255,0.2);
-    border-bottom: 10px solid rgba(0,0,0,0.1);
 }
 
 h1
