Even less padding

--- a/css/clock.css
+++ b/css/clock.css
@@ -1,7 +1,7 @@
 body
 {
     margin: 0;
-    padding: 50px 0;
+    padding: 0 0 40px 0;
     background-color: #95a5a6;
     color: #fff;
     font-family: sans-serif;
