--- a/css/alarm.css
+++ b/css/alarm.css
@@ -7,7 +7,7 @@ h2 {
 }
 .button {
 	display:block;
-	margin:10px auto;
+	margin:0 0 10px 0;
 	width:100px;
 	padding:10px 10px;
 }
@@ -18,6 +18,7 @@ h2 {
 	display: -webkit-flex;
 	display: flex;
 	-webkit-flex-flow: nowrap;
+	justify-content: space-between;
 }
 /********** The container that holds the alarm section *********/
 #alarmContainer {
@@ -37,7 +38,7 @@ h2 {
 #alarmHeader input {
 	position:absolute;
 	right:0px;
-	margin:5px;
+	margin:0;
 }
 #alarms {
 	margin-top:20px;
