--- a/css/clock.css
+++ b/css/clock.css
@@ -1,5 +1,7 @@
 body
 {
+    width: 100%;
+    height: 100%;
     margin: 0;
     padding: 0 0 40px 0;
     background-color: #95a5a6;
@@ -72,12 +74,19 @@ h1
 
 /***** ALARM *****/
 
-.name
+.alarm
 {
-    font-weight: bold;
+    margin-top: 10px;
 }
 
 .time
 {
-    margin: 0 10px;
+    font-size: 24px;
+    font-weight: bold;
+    text-align: left;
+}
+
+.name
+{
+    text-align: left;
 }
