--- a/css/clock.css
+++ b/css/clock.css
@@ -17,12 +17,17 @@ body
     background-color: rgba(255,255,255,0.2);
 }
 
-h1#title
+h1
 {
     margin: 0;
     font-size: 36px;
     font-weight: normal;
     letter-spacing: -1px;
+}
+
+h1:not(#title)
+{
+    color: #777;
 }
 
 #clock
